# Akad

./: .gitignore  404.html  CHANGELOG.md  Dockerfile.dashboard  Dockerfile.lab  Dockerfile.registry  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
akad/: __init__.py  cli.py  contract_loader.py  differ.py  engine.py  notifier.py  profiler.py  registry_client.py  sdk.py
akad/models/: contract.py  result.py
akad/notifiers/: base.py  email_notifier.py  webhook_notifier.py
akad/readers/: base.py  parquet_reader.py  sql_reader.py
akad/validators/: base.py  business_rule_validator.py  freshness_validator.py  quality_validator.py  schema_validator.py  volume_validator.py
api-reference/: index.html
architecture/: index.html
cli-reference/: index.html
contract-reference/: index.html
contracts/: example_transactions.yaml
contributing/: index.html
dashboard/: main.py
dashboard/templates/: _macros.html  base.html  breaches.html  contract_detail.html  discovery.html  index.html
docs/: api-reference.md  architecture.md  cli-reference.md  contract-reference.md  contributing.md  examples.md  index.md  installation.md  quickstart.md  sdk-reference.md  workflow.md
examples/: index.html
installation/: index.html
lab/: demo.py
lab/contracts/: daily_sales.yaml
quickstart/: index.html
registry/: database.py  main.py  models.py  schemas.py
registry/routers/: contracts.py  health.py  results.py
sdk-reference/: index.html
search/: search_index.json
tests/: conftest.py
tests/fixtures/contracts/: invalid_missing_required.yaml  valid_transactions.yaml
tests/integration/: test_business_rules_bnm_scenario.py  test_engine.py  test_registry_api.py  test_registry_client.py  test_sdk_registry_flow.py
tests/unit/: test_business_rule_validator.py  test_cli.py  test_contract_loader.py  test_differ.py  test_engine_errors.py  test_freshness_validator.py  test_notifiers.py  test_profiler.py  test_quality_validator.py  test_readers.py  test_schema_validator.py  test_sdk_validate.py  test_volume_validator.py
workflow/: index.html
